--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "kindscript-target-sample",
-  "version": "0.0.0",
-  "private": true,
-  "description": "sample target for KindScript",
-  "keywords": [
-    "JavaScript",
-    "education",
-    "KindScript"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Microsoft/kindscript-target-sample.git"
-  },
-  "author": "",
-  "license": "MIT",
-  "homepage": "https://github.com/Microsoft/kindscript-target-sample#readme",
-  "files": [
-    "README.md"
-  ],
-  "dependencies": {
-    "kindscript": "*",
-    "typescript": "^1.8.7"
-  }
+    "name": "kindscript-sample",
+    "version": "0.0.0",
+    "description": "sample target for KindScript",
+    "keywords": [
+        "JavaScript",
+        "education",
+        "KindScript"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Microsoft/kindscript-target-sample.git"
+    },
+    "author": "",
+    "license": "MIT",
+    "homepage": "https://github.com/Microsoft/kindscript-target-sample#readme",
+    "files": [
+        "README.md",
+        "kindtarget.json",
+        "built/*.js",
+        "built/*.json",
+        "built/*.d.ts",
+        "sim/public",
+        "docs/*.md"
+    ],
+    "devDependencies": {
+        "typescript": "^1.8.7"
+    },
+    "dependencies": {
+        "kindscript": "0.2.19"
+    }
 }
