--- a/sim/tsconfig.json
+++ b/sim/tsconfig.json
@@ -7,6 +7,6 @@
         "out": "../built/sim.js",
         "rootDir": ".",
         "newLine": "LF",
-        "sourceMap": true
+        "sourceMap": false
     }
 }
