--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "built/*.json",
     "built/*.d.ts",
     "sim/public",
-    "docs/*.md"
+    "docs/**"
   ],
   "devDependencies": {
-    "typescript": "^1.8.7"
+    "typescript": "^1.8.7",
+    "less": "^2.6.0",
+    "semantic-ui-less": "^2.2.4"
   },
   "dependencies": {
     "pxt-core": "0.7.7"
