Styling pxt-sample

--- a/theme/theme.config
+++ b/theme/theme.config
@@ -22,7 +22,7 @@
 @reset      : 'default';
 
 /* Elements */
-@button     : 'pxt';
+@button     : 'material';
 @container  : 'pxt';
 @divider    : 'pxt';
 @flag       : 'pxt';
@@ -32,7 +32,7 @@
 @input      : 'pxt';
 @label      : 'pxt';
 @list       : 'pxt';
-@loader     : 'pxt';
+@loader     : 'pulsar';
 @rail       : 'pxt';
 @reveal     : 'pxt';
 @segment    : 'pxt';
@@ -41,7 +41,7 @@
 /* Collections */
 @breadcrumb : 'default';
 @form       : 'default';
-@grid       : 'default';
+@grid       : 'pxt';
 @menu       : 'pxt';
 @message    : 'default';
 @table      : 'default';
