--- a/theme/theme.config
+++ b/theme/theme.config
@@ -22,7 +22,7 @@
 @reset      : 'default';
 
 /* Elements */
-@button     : 'material';
+@button     : 'pxt';
 @container  : 'pxt';
 @divider    : 'pxt';
 @flag       : 'pxt';
@@ -32,7 +32,7 @@
 @input      : 'pxt';
 @label      : 'pxt';
 @list       : 'pxt';
-@loader     : 'pulsar';
+@loader     : 'pxt';
 @rail       : 'pxt';
 @reveal     : 'pxt';
 @segment    : 'pxt';
@@ -49,7 +49,7 @@
 /* Modules */
 @accordion  : 'default';
 @checkbox   : 'default';
-@dimmer     : 'default';
+@dimmer     : 'pxt';
 @dropdown   : 'default';
 @embed      : 'default';
 @modal      : 'pxt';
@@ -66,7 +66,7 @@
 
 /* Views */
 @ad         : 'default';
-@card       : 'default';
+@card       : 'pxt';
 @comment    : 'default';
 @feed       : 'default';
 @item       : 'default';
