--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pxt-sample",
-  "version": "1.0.5",
+  "version": "1.0.4",
   "description": "sample target for PXT",
   "keywords": [
     "JavaScript",
@@ -31,6 +31,6 @@
     "semantic-ui-less": "^2.2.4"
   },
   "dependencies": {
-    "pxt-core": "1.7.26"
+    "pxt-core": "^2.2.0"
   }
 }
