--- a/theme/theme.config
+++ b/theme/theme.config
@@ -39,12 +39,12 @@
 @step       : 'pxt';
 
 /* Collections */
-@breadcrumb : 'default';
-@form       : 'default';
+@breadcrumb : 'pxt';
+@form       : 'pxt';
 @grid       : 'pxt';
 @menu       : 'pxt';
-@message    : 'default';
-@table      : 'default';
+@message    : 'pxt';
+@table      : 'pxt';
 
 /* Modules */
 @accordion  : 'default';
