--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pxt-sample",
-  "version": "1.0.17",
+  "version": "2.0.0",
   "description": "sample target for PXT",
   "keywords": [
     "JavaScript",
@@ -26,11 +26,17 @@
   "main": "built/pxtrequire.js",
   "typings": "built/pxtrequire.d.ts",
   "devDependencies": {
-    "typescript": "^1.8.7",
+    "typescript": "2.6.1",
     "less": "^2.6.0",
-    "semantic-ui-less": "^2.2.4"
+    "rtlcss": "^2.1.2",
+    "autoprefixer": "^6.7.6",
+    "semantic-ui-less": "^2.2.4",
+    "@types/bluebird": "2.0.33",
+    "@types/jquery": "3.2.16",
+    "@types/marked": "0.3.0",
+    "@types/node": "8.0.53"
   },
   "dependencies": {
-    "pxt-core": "2.*"
+    "pxt-core": "3.*"
   }
 }
