--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "files": [
     "README.md",
     "pxtarget.json",
+    "targetconfig.json",
     "built/*.js",
     "built/*.json",
     "built/*.d.ts",
