--- a/targetconfig.json
+++ b/targetconfig.json
@@ -6,6 +6,7 @@
         ]
     },
     "galleries": {
-        "Examples": "examples"
+        "Examples": "examples",
+        "TUtorials": "tutorials"
     }
 }
