--- a/targetconfig.json
+++ b/targetconfig.json
@@ -7,6 +7,6 @@
     },
     "galleries": {
         "Examples": "examples",
-        "TUtorials": "tutorials"
+        "Tutorials": "tutorials"
     }
 }
