--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
   },
   "dependencies": {
     "@types/peerjs": "0.0.29",
-    "pxt-core": "^3.22.22"
+    "pxt-core": "git+https://github.com/LaboratoryForPlayfulComputation/pxt#lpc-deploy"
   }
 }
