--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "docs/**"
   ],
   "devDependencies": {
-    "typescript": "2.6.1",
-    "semantic-ui-less": "2.2.14",
     "@types/bluebird": "2.0.33",
     "@types/jquery": "3.2.16",
     "@types/marked": "0.3.0",
-    "@types/node": "8.0.53"
+    "@types/node": "8.0.53",
+    "semantic-ui-less": "2.2.14",
+    "typescript": "2.6.1"
   },
   "dependencies": {
     "@types/peerjs": "0.0.29",
