basic autogen block stubs created

--- a/libs/tsconfig.json
+++ b/libs/tsconfig.json
@@ -7,5 +7,8 @@
         "rootDir": ".",
         "newLine": "LF",
         "sourceMap": true
-    }
+    },
+    "types": [
+        "webrtc"
+    ]
 }
