--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@types/peerjs": "0.0.29",
+    "@types/web-bluetooth": "0.0.4",
     "pxt-core": "git+https://github.com/LaboratoryForPlayfulComputation/pxt#lpc-deploy"
   }
 }
